[tool.poetry]
name = "partsbox-client"
version = "0.1.0"
description = "Python bindings to PartsBox REST API"
authors = ["Tyler Matteson <tyler@agritheory.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.12^"
httpx = "^0.22.0"
attrs = "^21.4.0"
cattrs = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "respx"
respx = "^0.19.1"
pytest-mypy = "^0.9.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
pytest-httpx = "^0.19.0"
mypy = "^0.931"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
line_length = 80